# HG-db

./: .gitignore  README.md
hgdb_core/: .gitignore  Cargo.toml  Config.toml
hgdb_core/hg_app/: Cargo.toml  build.rs
hgdb_core/hg_app/py_scripts/: dual_hypergraph.py  hypergraph.py  layered_hypergraph.py  main.py  requirements.txt
hgdb_core/hg_app/py_scripts/json-data/: test_dual.json  test_simple.json
hgdb_core/hg_app/src/: main.rs
hgdb_core/src/: build.rs  lib.rs
hgdb_core/src/db_config/: mod.rs
hgdb_core/src/hyper_edge/: mod.rs
hgdb_core/src/hyper_edge/entity/: dual_h_edge.rs  light_h_edge.rs  mod.rs  simple_h_edge.rs
hgdb_core/src/hyper_edge/entity/relationship/: mod.rs  relationship.rs
hgdb_core/src/hyper_edge/entity/structure/: structure.rs
hgdb_core/src/hyper_edge/repository/: light_h_edge_repository.rs  mod.rs  simple_h_edge_repository.rs
hgdb_core/src/hyper_edge/services/: mod.rs  simple_h_edge_service.rs
hgdb_core/tests/: db_config_test.rs  dual_h_edge_test.rs  light_h_edge_test.rs  simple_h_edge_test.rs
