[package]
name = "hgdb_core"
version = "0.1.0"
edition = "2021"

[[test]]
name = "db_config_test"
path = "tests/db_config_test.rs"

[[test]]
name = "simple_h_edge_test"
path = "tests/simple_h_edge_test.rs"

[dependencies]
bincode = "1.3.3"
quote = "1.0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = { version = "0.23.0", features = ["snappy"] }
tempfile = "3.16.0"
